fixed routerlink active top header. fixed copyright alignment.

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -16,8 +16,7 @@
   color: $yellowelement !important;
 }
 .copyrightplacement {
-  position: absolute;
-  bottom: 0;
+    text-align: center;
 }
 .listtype {
   list-style-type: none;
