--- a/src/app/top-header/top-header.component.scss
+++ b/src/app/top-header/top-header.component.scss
@@ -13,5 +13,5 @@
     padding-top: 12px; 
 }
 .router-link-active {
-    text-decoration: underline 2px $pinkelement; 
+    text-decoration: underline 2px $pinkelement !important;
 }   
